--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vuetify": "^2.6.0",
-    "vuex": "^3.4.0",
     "express": "^4.17.1",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "vue": "^2.6.11",
+    "vue-yandex-maps": "^0.11.13",
+    "vuetify": "^2.6.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.12",
